test-suite/tests/fail/ui/states/redundant_assert.stderr
error: state is already asserted
 --> tests/fail/ui/states/redundant_assert.rs:8:24
  |
8 |     #[stated(assert(A, A))]
  |                        ^
